--- a/templates/footer.html
+++ b/templates/footer.html
@@ -53,3 +53,8 @@
         <div class="container">&copy; 2011 - 2021 Zion Auto Gallery Pte Ltd</div>
     </div>
 </footer>
+<script src="@@path./js/minified/dropdown.js"></script>
+
+<script>
+    new Dropdown();
+</script>
