--- a/css/style.css
+++ b/css/style.css
@@ -11910,6 +11910,22 @@ footer {
     padding: 0 0; } }
 
 /* About */
+.about__badges {
+  display: inline-flex;
+  align-items: flex-start;
+  margin-top: 60px; }
+
+.about__badge {
+  display: flex;
+  justify-content: center;
+  max-width: calc(25% - 10px); }
+
+.about__badge:not(:first-child) {
+  margin-left: 50px; }
+
+.about__badge-image {
+  max-width: 100%; }
+
 .about-top {
   width: 100%;
   float: left;
@@ -11918,7 +11934,8 @@ footer {
   overflow: hidden; }
   .about-top .about-top-right {
     width: 100%;
-    float: left;
+    display: flex;
+    flex-direction: column;
     position: relative;
     top: 50%;
     -webkit-transform: translateY(-50%);
@@ -11926,20 +11943,17 @@ footer {
     transform: translateY(-50%); }
   .about-top p {
     width: 100%;
-    float: left;
     color: #898989;
     font-size: 16px;
     padding: 30px 0;
     margin: 0; }
   .about-top .about-top-right-bottom {
     width: 100%;
-    float: left;
     border-top: 1px solid #7f7f7f;
     padding: 30px 0 0 0;
     margin: 40px 0 0 0; }
   .about-top .mobile-image {
-    width: 100%;
-    float: left; }
+    width: 100%; }
 
 .mission-section {
   width: 100%;
@@ -12033,6 +12047,22 @@ footer {
     left: 50%;
     margin: 0 0 0 -160px;
     bottom: 0; }
+
+@media (max-width: 1100px) {
+  .about__badge:not(:first-child) {
+    margin-left: 30px; } }
+
+@media (max-width: 990px) {
+  .about__badges {
+    margin-top: 20px;
+    justify-content: center;
+    align-items: center; } }
+
+@media (max-width: 480px) {
+  .about__badge:not(:first-child) {
+    margin-left: 20px; }
+  .about__badge-image {
+    max-height: 48px; } }
 
 @media screen and (min-width: 768px) {
   .testimonial-section .testimonial-box-row {
